--- a/client/src/app/component/navigation/navigation.component.html
+++ b/client/src/app/component/navigation/navigation.component.html
@@ -1,7 +1,7 @@
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
+<nav class="mavb navbar-brand">
     <div class="container">
         <a class="navbar-brand" routerLink="/">Horizon-Bank</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        <button class="navbar-nav" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
