--- a/client/src/app/component/listar-cliente/listar-cliente.component.html
+++ b/client/src/app/component/listar-cliente/listar-cliente.component.html
@@ -1,16 +1,36 @@
-<div class="col-md-4" *ngFor="let cliente of clientes">
-    <div class="card-header">
-        <div class="card-header bg-blue text-black d-flex justify-content-between align-items-center">
-            {{cliente.nombre}}
-            <button class="btn btn-danger" (click)="deleteCliente(cliente.id)">
-                <i class="far fa-trash-alt"></i>
-            </button>
-        </div>
-        <div class="card-body">
-            <p>{{cliente.monto}}</p>
-            <a [routerLink]="['/clientes-edit', cliente.id]" class="btn btn-info btn-danger">
-                Editar Usuario
-            </a>
+<div class="container mt-5">
+    <div class="row">
+        <div class="col-lg-8 offset-lg-2">
+            <div class="card">
+                <div class="card-body text-center">
+                    <span class="titulo">Clientes Registrados</span>
+                    <button class="btn btn-success float-end" routerLink="/crear-producto">Registrarse</button>
+                    <table *ngIf="listarcliente.length > 0" class="table table-striped mt-3">
+                        <thead>
+                          <tr>
+                            <th scope="col">Nombre</th>
+                            <th scope="col">Apellido</th>
+                            <th scope="col">Tipo de cuenta</th>
+                            <th scope="col">Monto</th>
+                            <th scope="col"></th>
+                          </tr>
+                        </thead>
+                        <tbody>
+                          <tr *ngFor="let cliente of listarcliente">
+                            <td>{{ cliente.nombre }}</td>
+                            <td>{{ cliente.apellido }}</td>
+                            <td>{{ cliente.tipocuenta}}</td>
+                            <td>{{ cliente.monto | currency:'USD' }}</td>
+                            <td>
+                                <i [routerLink]="['/editar-cliente', cliente._id]" class="fas fa-edit text-primary"></i>
+                                <i (click)="deleteCliente(cliente._id)" class="fas fa-trash text-danger"></i>
+                            </td>
+                          </tr>
+                        </tbody>
+                      </table>
+                      <h5 style="text-align: start; margin-top: 10px;" *ngIf="listarcliente.length == 0">No se ha registrado un cliente</h5>
+                </div>
+            </div>
         </div>
     </div>
-</div>
+</div
