--- a/Frontend/client/src/app/app.component.html
+++ b/Frontend/client/src/app/app.component.html
@@ -6,7 +6,7 @@
     <a class="navbar-brand">
       <img src="assets/img/logo.jpg" width="30" height="30" class="d-inline-block align-top text-decoration-none"
         alt="">
-      Horizon Bank
+      Coffe Place
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span
@@ -19,12 +19,12 @@
 
         <!-- aqui agregar componentes-->
         <li class="nav-item">
-          <a class="nav-link" [routerLink]="'/Sesion'" [routerLinkActive]="'active'">Iniciar Sesion</a>
+          <a class="nav-link" [routerLink]="'/Menú'" [routerLinkActive]="'active'">Menú</a>
         </li>
 
 
         <li class="nav-item">
-          <a class="nav-link" [routerLink]="'/registro'" [routerLinkActive]="'active'">Registrate 📥</a>
+          <a class="nav-link" [routerLink]="'/registro'" [routerLinkActive]="'active'">Iniciar sesión 📥</a>
         </li>
 
 
@@ -54,6 +54,14 @@
 
     </div>
 
-    
+    <div class="container-fluid py-4 px-sm-3 px-md-5">
+      <p class="m-0 text-center text-black">Copyright &copy; Coffe-Place Website 2023 <br>
+        Designed by <i> Mayra, Elisa, Doménica</i>
+      </p>
+      <!--
+      <a href="#" class="back-to-top text-black"
+        style="text-decoration: none; text-align: right; font-weight: bold;">Subir</a>
+-->
+    </div>
   </div>
 </footer>
