--- a/Frontend/client/src/app/registro/registro.component.html
+++ b/Frontend/client/src/app/registro/registro.component.html
@@ -8,28 +8,18 @@
                     <form class="user" #formReg="ngForm">
 
                         <div id="correo" class="form-group">
-                            <label for="nombre">nombre</label>
-                            <input type="text" name="nombre" #nombre="ngModel" [(ngModel)]="reg.nombre" required
-                                pattern="" class="form-control form-control-user" placeholder="nombre" />
-                            <span *ngIf="nombre.touched && !nombre.valid">
-                                * El nombre es obligatorio
+                            <label for="correo">Correo</label>
+                            <input type="text" name="correo" #correo="ngModel" [(ngModel)]="reg.correo" required
+                                pattern="" class="form-control form-control-user" placeholder="Correo" />
+                            <span *ngIf="correo.touched && !correo.valid">
+                                * Correo es obligatorio
                             </span>
 
-
-                            <div id="contraseña" class="form-group">
-                                <label for="contraseña">contraseña</label>
-                                <input type="password" name="password" #contraseña="ngModel" [(ngModel)]="reg.contraseña" required
-                                    pattern="" class="form-control form-control-user" placeholder="contraseña" />
-                                <span *ngIf="contraseña.touched && !contraseña.valid">
-                                    * La contraseña es obligatorio
-                                </span>
-    
                             <br>
                             <button (click)="mostrar=true" [disabled]="!formReg.form.valid"
                                 class="btn btn-primary btn-sucess btn-block"> Continuar </button>
 
                         </div>
-                    </div>
                     </form>
 
                     <div *ngIf="mostrar">
@@ -37,7 +27,7 @@
                         <button (click)="mostrar=false" class="btn btn-sucess"> Ocultar </button>
                         <br> <br>
 
-                        <h4 class="text-white">Llena tus datos</h4>
+                        <h4 class="text-white">Bienvenid@, llena tus datos</h4>
 
                         <form class="user" #formReg="ngForm">
                             <div class="form-group">
@@ -104,7 +94,7 @@
                     <h1 class="font-weight-light">Registrate :)</h1>
                     <p>
                         <br><br>
-                       
+                        Para recibir tus facturas, información de <br> promociones y ofertas, registra tu correo.
                     </p>
                 </div>
 
