--- a/Frontend/client/src/app/sesion/sesion.component.html
+++ b/Frontend/client/src/app/sesion/sesion.component.html
@@ -6,10 +6,10 @@
 
 
                     <form class="user" #formReg="ngForm">
-                        Formulario de Registro
+                       Inicio de sesión
                         <div id="nombre" class="form-group">
                             <label for="nombre">Nombre</label>
-                            <input type="text" name="nombre" #nombre="ngModel" [(ngModel)]="reg.nombre" required
+                            <input type="text" name="nombre" #nombre="ngModel" [(ngModel)]="ses.nombre" required
                                 pattern="[a-zA-Z]+" class="form-control form-control-user" placeholder="Nombre" />
                             <span *ngIf="nombre.touched && !nombre.valid">
                                 * Nombre es obligatorio
@@ -17,7 +17,7 @@
                         </div>
                         <div class="form-group">
                             <label for="apellidos">Apellido</label>
-                            <input type="text" name="apellidos" #apellidos="ngModel" [(ngModel)]="reg.apellido"
+                            <input type="text" name="apellidos" #apellidos="ngModel" [(ngModel)]="ses.apellido"
                                 required pattern="[a-zA-Z]+" class="form-control form-control-user"
                                 placeholder="Apellido" />
                             <span *ngIf="apellidos.touched && !apellidos.valid">
@@ -25,19 +25,10 @@
                             </span>
                         </div>
                         <br>
-                        <div class="form-group">
-                            <label for="telefono">Teléfono</label>
-                            <input type="text" name="telefono" #telefono="ngModel" [(ngModel)]="reg.telefono"
-                                required pattern="[0-9]+" class="form-control form-control-user"
-                                placeholder="Teléfono" />
-                            <span *ngIf="telefono.touched && !telefono.valid">
-                                * Teléfono es obligatorio
-                            </span>
-                        </div>
-
+                        
                         <div id="contrasena" class="form-group">
                             <label for="contrasena">Contraseña</label>
-                            <input type="password" name="password" #contrasena="ngModel" [(ngModel)]="reg.contrasena" required
+                            <input type="password" name="password" #contrasena="ngModel" [(ngModel)]="ses.contrasena" required
                                 pattern="" class="form-control form-control-user" placeholder="Contrasena" />
                             <span *ngIf="contrasena.touched && !contrasena.valid">
                                 * Contraseña es obligatorio
@@ -45,20 +36,10 @@
                             <br>
                         </div>
 
-                        <div id="correo" class="form-group">
-                            <label for="correo">Correo</label>
-                            <input type="text" name="correo" #correo="ngModel" [(ngModel)]="reg.correo" required
-                                pattern="" class="form-control form-control-user" placeholder="Correo" />
-                            <span *ngIf="correo.touched && !correo.valid">
-                                * Correo es obligatorio
-                            </span>
-                            <br>
-                        
-                                <input type="submit" name="Continuar" [disabled]="!formReg.form.valid" 
-                                class="btn btn-primary btn-sucess btn-block" value="Continuar" [routerLink]="'/usuario'">
+                       <input type="submit" name="Continuar" [disabled]="!formReg.form.valid"
+                       class="btn btn-primary btn-sucess btn-block" value="Continuar" [routerLink]="'/usuario'">
 
-                                
-                        </div>
+                    
                     </form>
 
                     
@@ -69,7 +50,7 @@
                 </div>
 
                 <div class="col-lg-5">
-                    <h1 class="font-weight-light">Registrate!</h1>
+                   
                    
                 </div>
 
