--- a/Frontend/client/src/app/inicio/inicio.component.html
+++ b/Frontend/client/src/app/inicio/inicio.component.html
@@ -1,15 +1,83 @@
+<!--Inicio carrucel-->
+<link href="/client/src/styles.css" rel="stylesheet" type="text/css" />
+<body>
+    <div id="carrusel-contenido">
+        <div id="carrusel-caja">
+            <div class="carrusel-elemento">
+                <img class="imagenes" src="../../assets/img/imagen1.png" >
+            </div>
+            <div class="carrusel-elemento">   
+                <img class="imagenes" src="../../assets/img/imagen2.png">
+            </div>
+           
+        </div>
+    </div>
+</body>
+<!--Fin carrucel-->
+
+
+
 <!-- Page Content-->
 <div class="container px-4 px-lg-5">
     <!-- Heading Row-->
+    <h3>"Horizon Bank - Tu banca sin fronteras"</h3> 
+    <p>Horizon-Bank es una herramienta sofisticada que ayuda a los clientes a alcanzar sus metas financieras mediante tecnología de vanguardia. El concepto "sin fronteras" sugiere una perspectiva de
+         crecimiento y éxito continuo, con servicios en línea confiables y seguros.</p>
     <div class="row gx-4 gx-lg-5 align-items-center my-5">
-      
-        <!--
-       <div class="texto-encima">
-            "TÓMATE UN <br> RESPIRO, TÓMATE UN <br> CAFÉ"
-        </div>   -->
+ <!-- Inicio Tarjetas-->
+                    <h4>Todo lo que esperas de un Banco. Sin ir a uno.</h4>
+      <div class="row gx-4 gx-lg-5">
+        <div class="col-md-4 mb-5">
+            <div class="card h-100">
+                <div class="card-body">
+                    <h2 class="card-title">Avances en Linea</h2>
+
+                    <p class="card-text">
+                       
+                    </p>
+                    <img src="../../assets/img/adelantos.png" class="img-fluid rounded mb-4 mb-lg-0">
+
+                </div>
+                <div class="card-footer">
+                    <h5>¿Necesitas dinero hoy?</h5>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4 mb-5">
+            <div class="card h-100">
+                <div class="card-body">
+                    <h2 class="card-title">Acerca de pagos y servicios</h2>
+                    <p class="card-text"></p>
+                    <img src="../../assets/img/pagos.png" class="img-fluid rounded mb-4 mb-lg-0">
+
+                </div>
+                <div class="card-footer">
+                    <h5>Paga tus servicios desde la comodidad de tu hogar</h5>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4 mb-5">
+            <div class="card h-100">
+                <div class="card-body">
+                    <h2 class="card-title">Bloqueo de tarejtas</h2>
+                    <p class="card-text"></p>
+                    <img src="../../assets/img/bloqueo.png" class="img-fluid rounded mb-4 mb-lg-0">
+
+                </div>
+                <div class="card-footer">
+                    <h5>Bloquea temporalmente</h5>
+                </div>
+            </div>
+        </div>
+
     </div>
+</div>
+
+     <!--Fin Tarjetas-->
+
+    
 
 
    
-    <!-- Icon Divider-->
+   
    
