--- a/Frontend/client/src/app/usuario/usuario.component.html
+++ b/Frontend/client/src/app/usuario/usuario.component.html
@@ -1,10 +1,16 @@
 <div class="container px-4 px-lg-5">
 
-    <h2> Mi Perfil</h2>
+    <h2> Mi Cuenta</h2>
     <div class="row gx-4 gx-lg-5 align-items-center " style=" margin: 50px;">
         <div class="col-lg-5">
     <h3>Bienvenido a Horizon Bank</h3>
     </div>     
     </div>
+    <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link" [routerLink]="'/cuenta'" [routerLinkActive]="'active'">Mi cuenta</a>
+        </li>
+        
+    </ul>
 
 </div>
