--- a/attempt2/templates/index.html
+++ b/attempt2/templates/index.html
@@ -70,7 +70,7 @@
                         <h5 class="text-center">Horizon Bank: Usuario</h5>
                     </div>
                     <div class="card-body">
-                        <form action="/page" method="GET">
+                        <form action="/sesion" method="GET">
                             <button class="btn btn-primary" type="submit">Ir a Page</button>
                         </form>
                     </div>
