--- a/Front/Frontend/client/src/app/app.component.html
+++ b/Front/Frontend/client/src/app/app.component.html
@@ -16,23 +16,34 @@
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span
         class="navbar-toggler-icon"></span></button>
+
+
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link" [routerLink]="'/Inicio'" [routerLinkActive]="'active'">Inicio</a>
+          <a class="nav-link" [routerLink]="'/inicio'" [routerLinkActive]="'active'">Inicio</a>
         </li>
-
 
         
-        <!-- aqui agregar componentes-->
-        <li class="nav-item">
-          <a class="nav-link" [routerLink]="'/login'" [routerLinkActive]="'active'">Iniciar Sesión</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" [routerLink]="'/registro'" [routerLinkActive]="'active'">Regístrate!📥</a>
-        </li>
-        
 
+        <li class="nav-item" *ngIf="setUser()">
+          <a class="nav-link" [routerLink]="'/inicio'" [routerLinkActive]="'active'">Crear Cuenta</a>
+        </li>
+        <li class="nav-item" *ngIf="setUser()">
+          <a class="nav-link" [routerLink]="'/inicio'" [routerLinkActive]="'active'">{{this.logedUserNombres}}</a>
+        </li>
+        <li class="nav-item" *ngIf="setUser()">
+          <a class="nav-link" [routerLink]="'/logout'" [routerLinkActive]="'active'">Cerrar Sesión</a>
+        </li>
+          
+          <li class="nav-item" *ngIf="!setUser()">
+            <a class="nav-link" [routerLink]="'/login'" [routerLinkActive]="'active'">Iniciar Sesión</a>
+          </li>
+          <li class="nav-item" *ngIf="!setUser()">
+            <a class="nav-link" [routerLink]="'/registro'" [routerLinkActive]="'active'">¡Regístrate!📥</a>
+          </li>
+        
+        
 
         
         
