--- a/Front/Frontend/client/src/app/login/login.component.html
+++ b/Front/Frontend/client/src/app/login/login.component.html
@@ -15,8 +15,8 @@
                      class="form-control form-control-user" placeholder="Contraseña" />
                     <br><br>
                      <div class="col" style="text-align: center;">
-                        <input type="submit" name="Continuar" [disabled]="!formReg.form.valid" (click)="login()"
-                        class="btn btn-primary btn-sucess btn-block" value="Continuar" [routerLink]="'/inicio'">
+                        <input [routerLink]="'/inicio'" type="submit" name="Continuar" [disabled]="!formReg.form.valid" (click)="login()"
+                        class="btn btn-primary btn-sucess btn-block" value="Continuar" >
                     </div>
                 </form>
 
