--- a/Front/Frontend/client/src/app/app.component.html
+++ b/Front/Frontend/client/src/app/app.component.html
@@ -11,6 +11,7 @@
     <a class="navbar-brand">
       <img src="assets/img/logo.jpg" width="30" height="30" class="d-inline-block align-top text-decoration-none"
         alt="">
+        Horizon-Bank
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span
@@ -38,6 +39,7 @@
         <li class="nav-item" *ngIf="setUser()">
           <a class="nav-link" [routerLink]="'/crear-cuenta'" [routerLinkActive]="'active'">Crear Cuenta</a>
         </li>
+        
 
         <li class="nav-item" *ngIf="setUser()">
           <a class="nav-link" [routerLink]="'/inicio'" [routerLinkActive]="'active'" (click)="sentAccountState()">{{this.logedUserNombres}}</a>
