--- a/Front/Frontend/client/src/app/components/inicio/inicio.component.html
+++ b/Front/Frontend/client/src/app/components/inicio/inicio.component.html
@@ -54,7 +54,7 @@
         <div class="col-md-4 mb-5">
             <div class="card h-100">
                 <div class="card-body">
-                    <h2 class="card-title">Bloqueo de tarejtas</h2>
+                    <h2 class="card-title">Bloqueo de tarjetas</h2>
                     <p class="card-text"></p>
                     <img src="../../assets/img/bloqueo.png" class="img-fluid rounded mb-4 mb-lg-0">
                 </div>
